# routes/reg/server.js
@@ -1,33 +1,6 @@
 var express = require('express');
 var router = express.Router();
-var Server = require('../models/server');
-var jwt = require('jsonwebtoken');
-
-router.use('/', function (req, res, next) {
-    jwt.verify(req.get('Authorization'), '20Kj!G!aming?Rock.17', function (err, decoded) {
-        if (err) {
-            jwt.verify(req.get('Authorization'), '20Kj!G!aming?Rock.Creator.17', function (err2, decoded2) {
-                if (err2) {
-                    jwt.verify(req.get('Authorization'), '20Kj!G!aming?Rock.Admin.17', function (err3, decoded3) {
-                        if (err3) {
-                            res.status(401).json({
-                                title: 'Not Authenticated'
-                            });
-                        }else{
-                            next();
-                        }
-
-                    });
-
-                }else{
-                    next();
-                }
-            });
-        }else{
-            next();
-        }
-    });
-});
+var Server = require('../../models/server');
 
 router.get('/', function (req, res, next) {
     Server.find()
